--- a/angular.json
+++ b/angular.json
@@ -33,11 +33,14 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/jquery-ui-dist/jquery-ui.min.css",
+              "./node_modules/select2/dist/css/select2.min.css",
               "src/assets/styles/styles.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/jquery-ui-dist/jquery-ui.min.js",
+              "./node_modules/jquery-validation/dist/jquery.validate.min.js",
+              "./node_modules/select2/dist/js/select2.full.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.bundle.js"
             ]
           },
