--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "jquery-ui-dist": "^1.13.1",
     "jquery-validation": "^1.19.5",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "select2": "^4.1.0-rc.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
